2025-11-25T00:59:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19654540605 # 819
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-25
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 681 1075 / 685 1079
* notice: next accum: outdated-unq outdated-all / unq all: 682 1076 / 685 1079
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-10] / []

2025-11-24T01:04:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19620220461 # 818
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-24
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 680 1074 / 685 1079
* notice: next accum: outdated-unq outdated-all / unq all: 681 1075 / 685 1079
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-09] / []

2025-11-21T00:59:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19556319783 # 815
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-21
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 680 1074 / 684 1078
* notice: next accum: outdated-unq outdated-all / unq all: 680 1074 / 685 1079
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-20]

2025-11-15T00:58:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19381830268 # 809