@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-25T00:59:25Z",
-  "count_outdated" : 1076,
-  "uniques_outdated" : 682,
+  "timestamp" : "2025-11-26T01:00:25Z",
+  "count_outdated" : 1077,
+  "uniques_outdated" : 683,
   "count" : 1079,
   "uniques" : 685,
   "clones" : [
-    {
-      "timestamp": "2025-11-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-14T00:00:00Z",
       "count": 1,
